--- a/src/app.css
+++ b/src/app.css
@@ -32,8 +32,26 @@ button {
   border-radius: 50%;
 }
 
-.input-container {
-  padding: 2.5rem;
+.add-form {
+  display: flex;
+  margin: 0.5em;
+}
+
+.add-input {
+  margin-right: 0.2em;
+  font-size: 1.5rem;
+}
+
+.add-input::placeholder {
+  color: #00800058;
+}
+
+.add-button {
+  height: 100%;
+  font-size: 1.2rem;
+  padding: 0.3em 0.5em;
+  background-color: green;
+  color: white;
 }
 
 .habit {
