change font color

--- a/src/app.css
+++ b/src/app.css
@@ -22,6 +22,7 @@ ul {
 
 .container {
   max-width: 38rem;
+  overflow-y: auto;
   margin: 3rem auto;
   box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.5);
   border-radius: 0.4rem;
@@ -42,6 +43,10 @@ ul {
 .navbar-logo {
   color: #de8971;
   margin-right: 0.5em;
+}
+
+.navbar-title {
+  color: #3d3d3e;
 }
 
 .navbar-count {
@@ -105,6 +110,10 @@ ul {
   flex-wrap: wrap;
   justify-content: start;
   align-items: center;
+}
+
+.habit-name {
+  color: #58555a;
 }
 
 .habit-count {
