remove unnecessary file

--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
-
 * {
   box-sizing: border-box;
 }
@@ -81,9 +79,10 @@ ul {
 }
 
 .add-input::placeholder {
-  font-family: 'Muli';
+  font-family: 'Poppins';
   font-size: 1.5rem;
-  color: #00800058;
+  color: #a7d0cd;
+  opacity: 0.7;
   padding: 0.5rem;
 }
 
@@ -91,7 +90,7 @@ ul {
   height: 100%;
   font-size: 1.2rem;
   padding: 0.3em 0.5em;
-  background-color: #eba83a;
+  background-color: #a7d0cd;
   color: white;
   border-radius: 0.2rem;
 }
@@ -103,7 +102,7 @@ ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
