--- a/src/app.css
+++ b/src/app.css
@@ -106,6 +106,11 @@ ul {
   align-items: center;
 }
 
+.habit-name {
+  max-width: 55%;
+  overflow-x: auto;
+}
+
 .habit-count {
   display: inline-block;
   text-align: center;
