--- a/src/app.css
+++ b/src/app.css
@@ -1,26 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Varela Round', sans-serif;
 }
 
 button {
   outline: none;
-  border: none;
+  border: 0;
   cursor: pointer;
 }
 
-ul {
-  margin: 0;
-}
-
 .container {
-  max-width: 38rem;
-  margin: 3rem auto;
+  width: 40rem;
+  margin: 2em auto;
   box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.5);
   border-radius: 0.4rem;
   padding-bottom: 2rem;
@@ -28,11 +24,13 @@ ul {
 
 .navbar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   font-size: 2rem;
-  padding: 0.5em 1em;
-  background-color: #ffe9d6;
+  font-weight: 600;
+  padding: 1em;
+  background-color: #3d405b;
+  color: #f4f1de;
   text-align: center;
   border-radius: 0.4rem 0.4rem 0 0;
 }
@@ -43,25 +41,17 @@ ul {
 }
 
 .navbar-count {
+  display: inline-block;
   text-align: center;
   font-size: 2rem;
+  font-weight: normal;
   width: 2.5rem;
   height: 2.5rem;
   line-height: 2.5rem;
-  margin-left: 0.2em;
-  background-color: #a7d0cd;
+  margin-left: 0.4em;
+  background-color: #de8971;
   color: white;
   border-radius: 50%;
-}
-
-.habits-reset {
-  font-family: inherit;
-  font-size: 1.2rem;
-  margin-left: 2rem;
-  padding: 0.2em 1em;
-  background-color: #7b6079;
-  color: white;
-  border-radius: 0.5rem;
 }
 
 .add-form {
@@ -79,25 +69,26 @@ ul {
 }
 
 .add-input::placeholder {
-  font-family: 'Poppins';
+  font-family: 'Varela Round';
   font-size: 1.5rem;
-  color: #a7d0cd;
-  opacity: 0.7;
+  color: #bccc9a;
+  opacity: 0.8;
   padding: 0.5rem;
 }
 
 .add-button {
+  font-family: 'Varela Round';
   height: 100%;
   font-size: 1.2rem;
   padding: 0.3em 0.5em;
-  background-color: #a7d0cd;
+  background-color: #f2cc8f;
   color: white;
   border-radius: 0.2rem;
 }
 
 .habit {
   position: relative;
-  font-size: 2.3rem;
+  font-size: 2rem;
   padding: 0.5em;
   list-style: none;
   display: flex;
@@ -109,6 +100,7 @@ ul {
 .habit-name {
   max-width: 55%;
   overflow-x: auto;
+  color: #495057;
 }
 
 .habit-count {
@@ -120,14 +112,14 @@ ul {
   line-height: 2.5rem;
   margin-left: 0.2em;
   margin-right: 0.5em;
-  background-color: #a7d0cd;
+  background-color: #f2cc8f;
   color: white;
   border-radius: 50%;
 }
 
 .button-container {
   position: absolute;
-  left: 65%;
+  right: 3rem;
   display: flex;
   justify-content: flex-end;
 }
@@ -144,40 +136,22 @@ ul {
 
 .habit-increase,
 .habit-decrease {
-  color: #de8971;
+  color: #bccc9a;
 }
 
 .habit-delete {
   font-size: 2rem;
-  color: #779f9c;
+  color: #de8971;
 }
 
-@media screen and (max-width: 32rem) {
-  .habit {
-    flex-direction: column;
-  }
-
-  .habit-name {
-    font-size: 1.8rem;
-  }
-
-  .habit-count {
-    width: 2rem;
-    height: 2rem;
-    line-height: 2rem;
-    font-size: 1.5rem;
-  }
-
-  .button-container {
-    position: relative;
-    left: 0;
-    top: 0.5rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .habit-button {
-    font-size: 2rem;
-  }
+.habits-reset {
+  display: block;
+  margin: auto;
+  font-family: inherit;
+  font-size: 1.2rem;
+  margin: auto;
+  padding: 0.3em 1em;
+  background-color: #e07a5f;
+  color: white;
+  border-radius: 0.5rem;
 }
